tests/baselines/reference/privateNameEnum.errors.txt
privateNameEnum.ts(2,5): error TS18024: An enum member cannot be named with a private identifier.


==== privateNameEnum.ts (1 errors) ====
    enum E {
        #x
        ~~
!!! error TS18024: An enum member cannot be named with a private identifier.
    }
    